Fix color fade and spacing of clickable paper buttons

--- a/css/main.css
+++ b/css/main.css
@@ -107,7 +107,7 @@ main {
 }
 .mainWindow div {
   flex-grow: 1;
-  margin: 0 0.5em 0 0.5em;
+  margin: 0.25em 0.5em 0.25em 0.5em;
 }
 .mainWindow button{
   font-family: 'Copse', serif;
